welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if (day==1 && vacation==false || day==2 && vacation==false || day==3 && vacation==false || day==4 && vacation==false || day==5 && vacation==false) {
		return 7:00
	}
	else if (vacation==true) {
		return 10:00
	}
	else {
		return 10:00
	}
}